[package]
name    = "what_was_that"
version = "0.1.0"
edition = "2021"
license = "0BSD"

[dependencies]
alto_logger      = "0.3.7"
anyhow           = "1.0.57"
fastrand         = "1.7.0"
log              = "0.4.17"
pin-project-lite = "0.2.9"
rspotify         = { version = "0.11.5", features = ["cli"] }
# serenity         = "0.11.2"
simple_env_load  = "0.2.0"
tokio            = { version = "1.18.2", features = ["io-util", "net", "rt-multi-thread", "time", "sync", "macros"] }
