[package]
name    = "what_was_that"
version = "0.1.0"
edition = "2021"
license = "0BSD"

[dependencies]
alto_logger      = "0.3.7"
anyhow           = "1.0.58"
flume            = { version = "0.10.14", default-features = false }
log              = "0.4.17"
rspotify         = { version = "0.11.5", features = ["cli", "client-ureq", "ureq-rustls-tls"], default-features = false }
simple_env_load  = "0.2.0"
